fix colour contrast for service buttons

--- a/src/_style/blocks/_home-hero.scss
+++ b/src/_style/blocks/_home-hero.scss
@@ -20,11 +20,11 @@
 }
 
 .app-home-hero__button-item--turquoise {
-  background-color: #309DA6;
+  background-color: #1e8088;
 }
 
 .app-home-hero__button-item--green {
-  background-color: #2D9C85;
+  background-color: #1d715f;
 }
 
 .app-home-hero__button-link {
